--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,8 +2,8 @@
   margin-left: auto;
   margin-right: auto;
   padding: 20px;
-  width: 600px;
-  background-color: rgb(197, 211, 211);
+  width: 100%;
+  background-color: #3470ff;
   border-radius: 10px;
   margin-top: 20px;
   border: 3px solid black;
@@ -15,11 +15,11 @@
 
 .list {
   display: flex;
-  gap: 50px;
+  gap: 100px;
 }
 
 .inactive {
   text-decoration: none;
-  color: rgb(137, 146, 156);
+  color: rgb(102, 113, 126);
   font-family: ubuntu;
 }
