--- a/src/components/LoadMoreBtn/LoadMoreBtn.module.css
+++ b/src/components/LoadMoreBtn/LoadMoreBtn.module.css
@@ -10,6 +10,7 @@
   margin-left: auto;
   margin-right: auto;
   margin-top: 100px;
+  cursor: pointer;
   &:hover,
   &:focus {
     color: #0b44cd;
